html login front end working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,48 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>Home Page</title>
 </head>
 
 <body>
+<div class="container">
+  <ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" href="/login">Login</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/">home</a>
+  </li>
+</ul>
+</div>
   {{{body}}}
+
+<footer class="page-footer font-small stylish-color-dark pt-4 ">
+    <!-- Social buttons -->
+    <ul class="list-unstyled list-inline text-center">
+      <li class="list-inline-item">
+        <a href="https://github.com/arozymu" class="btn-floating btn-fb mx-1">
+          <i class="fab fa-github"> Anna </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a href="https://github.com/Eddsonblanco" class="btn-floating btn-tw mx-1">
+          <i class="fab fa-github"> Eddson Blanco</i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a href="https://github.com/VanillaCoder" class="btn-floating btn-dribbble mx-1">
+          <i class="fab fa-github"> Liam</i>
+        </a>
+      </li>
+    </ul>
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3 ">© 2019 Copyright
+    </div>
+  </footer>
 </body>
 
 </html>
