--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,8 +12,10 @@
 <div class="container">
     <div class="row">
         <div>
-            <h1>sidbhasdbaskd</h1>
-            <h2>qkjdbkasjdbsajkdbksad</h2>
+            <h1>All forum categories</h1>
+            {{#each category}}
+            <h2 id="{{id}}">{{catID}}</h2>
+            {{/each}}
             <h3>qosjndfsjdlshd</h3>
         </div>
     </div>
