--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,9 @@
-<div class="jumbotron jumbotron-fluid d-flex align-items-center">
+<div class="jumbotron jumbotron-fluid d-flex text-center ">
   <div class="container  ">
-    <div class="CL ">
-        {{!-- <div>
-            <img src="/img/cllogo.jpg" alt="">
-        </div> --}}
         <h1 class="display-4 ">Coding Life ;</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-    </div>
   </div>
 </div>
-<div class="container">
-    <div class="row">
-        <div>
-            <h1>sidbhasdbaskd</h1>
-            <h2>qkjdbkasjdbsajkdbksad</h2>
-            <h3>qosjndfsjdlshd</h3>
-        </div>
-    </div>
-</div>
+
+
 <link rel="stylesheet" href="/styles/home.css">
