--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,27 +3,35 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>Home Page</title>
 </head>
 
 <body>
-<div class="container">
-  <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" href="/login">Login</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/">home</a>
-  </li>
-</ul>
-</div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    {{!-- <div class="navbar-header">
+      <a class="navbar-brand" href="#">Coding Life ;</a>
+    </div> --}}
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/" class="glyphicon glyphicon-home" ></a></li>
+      <li><a href="#forums">Forums</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/singup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
+
   {{{body}}}
 
-<footer class="page-footer font-small stylish-color-dark pt-4 ">
+<footer id="footer" class="page-footer font-small  pt-4 ">
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
@@ -44,7 +52,7 @@
     </ul>
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 ">© 2019 Copyright
+    <div class="footer-copyright text-center text-light py-3 ">© 2019 Copyright
     </div>
   </footer>
 </body>
