--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-<nav class="navbar navbar-inverse">
+<nav id="navmain" class="navbar navbar-inverse">
   <div class="container-fluid">
-    {{!-- <div class="navbar-header">
-      <a class="navbar-brand" href="#">Coding Life ;</a>
-    </div> --}}
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">logo here</a>
+    </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/" class="glyphicon glyphicon-home" ></a></li>
       <li><a href="#forums">Forums</a></li>
@@ -33,7 +33,7 @@
 
 <footer id="footer" class="page-footer font-small  pt-4 ">
     <!-- Social buttons -->
-    <ul class="list-unstyled list-inline text-center">
+    <ul class="list-unstyled list-inline text-center m">
       <li class="list-inline-item">
         <a href="https://github.com/arozymu" class="btn-floating btn-fb mx-1">
           <i class="fab fa-github"> Anna </i>
