--- a/public/styles/home.sass
+++ b/public/styles/home.sass
@@ -4,11 +4,6 @@ $color2:#6BFFB8
 $colorSecondary:#2A6041
 $color3: #1D9568
     
-body 
-    background: url(https://d3.xlrs.eu/wp-content/uploads/2018/01/black-gradient-background-1024x685.jpg)
-    background-repeat: no-repeat
-    background-size: cover
-    box-sizing: border-box
 
 #jumbotron
     background: none
@@ -16,12 +11,15 @@ body
 
 
 .container-card
-    display: flex
-    justify-content: space-around
+    display: inline-flex
+    flex-wrap: wrap
+    justify-content: center
     .main-card
         background: $colorText
         margin: 5px
-        width: 430px
+        img
+            width: 100%
+        
         
 
 
