--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -3,7 +3,11 @@ $colorText: #D7EBE1
 $color2:#6BFFB8
 $colorSecondary:#2A6041
 $color3: #1D9568
-body
+body 
+    background: url(https://d3.xlrs.eu/wp-content/uploads/2018/01/black-gradient-background-1024x685.jpg)
+    background-repeat: no-repeat
+    background-size: cover
+    
     
 #navmain
     background:  $colorPrimario
