--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,14 +16,14 @@
 <nav id="navmain" class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">logo here</a>
+      <a class="navbar-brand" href="#">C ; L</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/" class="glyphicon glyphicon-home" ></a></li>
-      <li><a href="#forums">Forums</a></li>
+      
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/singup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
