--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,6 +9,13 @@
 							<i class="fa fa-user"></i>
 						</span>
 					</div>
+                    <div class="wrap-input100 validate-input m-b-10" data-validate = "Password is required">
+						<input class="input100" type="email" name="email" placeholder="Email">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope"></i>
+						</span>
+					</div>
 
 					<div class="wrap-input100 validate-input m-b-10" data-validate = "Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password">
@@ -20,19 +27,15 @@
 
 					<div class="container-login100-form-btn p-t-10">
 						<button class="login100-form-btn">
-							Login
+							Sign Up
 						</button>
 					</div>
 
-					<div class="text-center w-full">
-						<a class="txt1" href="#">
-							Create new account
-							<i class="fa fa-long-arrow-right"></i>						
-						</a>
-					</div>
+					
 				</form>
 			</div>
 		</div>
 	</div>
-	
-<link rel="stylesheet" href="/styles/login.css">
+
+
+<link rel="stylesheet" href="/styles/signup.css">
