--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,105 +1,28 @@
 <div id="jumbotron" class="jumbotron jumbotron-fluid d-flex text-center ">
   <div class="container  ">
-        <h1 class="display-4 ">Coding ; Life </h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <h1 class="display-4 ">CodingLife ;</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
   </div>
 </div>
 
-<div class="container  ">
-  <div class="card-deck container-card" >
-  <div class="card main-card  " style="max-width: 40rem;"  >
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=480&q=80" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card main-card " style="max-width: 40rem;"  >
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=480&q=80" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card main-card " style="max-width: 40rem;"  >
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1561377330-ec7bfc35c780?ixlib=rb-1.2.1&auto=format&fit=crop&w=480&q=80" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card main-card " style="max-width: 40rem;"  >
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1492044715545-15ddedd84e5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=480&q=80" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  </div>
-</div>
-
-
-{{!-- <div class="container container-card">
-  <div class="row d-flex justify-content-between">
-
-  <div  class="col-sm-5 main-card">
-    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="...">
-    <div class="card">
+<div id="container" class="container  ">
+  {{#each category}}
+  <a href="/category/{{this.title}}" class="m-4">
+  <div class="card-deck container-card">
+    <div class="card main-card  " style="max-width: 40rem;">
+      <img class="card-img-top"
+        src="{{this.URL}}"
+        alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div> 
-  
-  <div class="col-sm-5 main-card">
-    <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="...">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">{{this.title}}</h5>
+        <p class="card-text">{{this.text}}</p>
+        <p class="card-text"><small class="text-muted">{{this.date}}</small></p>
       </div>
     </div>
   </div>
-  
+  </a>
+  {{/each}}
 </div>
-<div class="row d-flex justify-content-between">
-  <div class="col-sm-5 main-card">
-    <div>
-        <img src="https://images.unsplash.com/photo-1561377330-ec7bfc35c780?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="...">
-        <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    </div>
-  </div> 
-  <div class="col-sm-5 main-card">
-    <img src="https://images.unsplash.com/photo-1492044715545-15ddedd84e5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="...">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-</div>
-
-    </div>
-  </div> --}}
-{{!-- </div> --}}
 
 
 <link rel="stylesheet" href="/styles/home.css">
