--- a/public/styles/home.sass
+++ b/public/styles/home.sass
@@ -9,19 +9,19 @@ $color3: #1D9568
     background: none
     color: $colorText
 
+#container
+    margin-right: 60px
 
-.container-card
-    display: inline-flex
-    flex-wrap: wrap
-    justify-content: center
-    .main-card
-        background: $colorText
-        margin: 5px
-        img
-            width: 100%
+    .container-card 
         
-        
+        display: inline-flex
+        flex-wrap: wrap
+        justify-content: center
+        .main-card
+            background: #D7EBE1
+            margin: 5px
+            img 
+                width: 100%
 
 
-          
 
