--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,7 @@ body {
   background: url(https://d3.xlrs.eu/wp-content/uploads/2018/01/black-gradient-background-1024x685.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: 'Quattrocento Sans', sans-serif;
 }
 
 #navmain {
