--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,29 +9,30 @@
   <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap" rel="stylesheet">
   <title>Home Page</title>
 </head>
 
 <body>
-<nav id="navmain" class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">C ; L</a>
+  <nav id="navmain" class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">CL;</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/" class="glyphicon glyphicon-home"></a></li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/" class="glyphicon glyphicon-home" ></a></li>
-      
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
 
   {{{body}}}
 
-<footer id="footer" class="page-footer font-small  pt-4 ">
+  <footer id="footer" class="page-footer font-small  pt-4 ">
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center m">
       <li class="list-inline-item">
