--- a/public/styles/home.sass
+++ b/public/styles/home.sass
@@ -11,6 +11,11 @@ $color3: #1D9568
 
 #container
     margin-right: 60px
+    min-height: 520px
+a
+    text-align: center
+    font-size: 20px
+    color: $color3    
 
     .container-card 
         
