--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -4,11 +4,11 @@
         <div class="form-group form-box">
             <label for="Subject"></label>
             <input type="text" class="form-control" id="post-title" aria-describedby="textHelp"
-                placeholder="Post Title">
+                placeholder="Title" required="true">
         </div>
-        <div class="form-group form-box">
+        <div  class="form-group form-box">
             <label for="comment"></label>
-            <input type="text" class="form-control" id="post-body" placeholder="Body">
+            <input type="text" class="form-control" id="post-body" placeholder="Comment" required="true">
         </div>
 
         <button id="btn-newpost" type="" class="btn">New Post</button>
