--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,8 @@
 <div id="jumbotron" class="jumbotron jumbotron-fluid d-flex text-center ">
   <div class="container  ">
     <h1 class="display-4 ">CodingLife ;</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <p class="lead">“Give a man a program, frustrate him for a day.
+Teach a man to program, frustrate him for a lifetime.” <b id="bold">-Muhammad Waseem</b> </p>
   </div>
 </div>
 
