--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -5,17 +5,24 @@
 
 #container {
   margin-right: 60px;
+  min-height: 520px;
 }
-#container .container-card {
+
+a {
+  text-align: center;
+  font-size: 20px;
+  color: #1D9568;
+}
+a .container-card {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-#container .container-card .main-card {
+a .container-card .main-card {
   background: #D7EBE1;
   margin: 5px;
 }
-#container .container-card .main-card img {
+a .container-card .main-card img {
   width: 100%;
 }
 
