--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,21 @@
+* {
+  font-family: "Audiowide", "Russo One", sans-serif;
+  letter-spacing: 2px;
+}
+
 #jumbotron {
   background: none;
   color: #D7EBE1;
+}
+#jumbotron h1 {
+  color: #6BFFB8;
+  font-size: 80px;
+  letter-spacing: 20px;
+  margin-bottom: 20px;
+}
+
+#quote {
+  font-size: 15px;
 }
 
 #container {
@@ -8,22 +23,35 @@
   min-height: 520px;
 }
 
-a {
+a:link {
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   color: #1D9568;
+  text-decoration: none;
 }
-a .container-card {
+a:link .container-card {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-a .container-card .main-card {
+a:link .container-card .main-card {
   background: #D7EBE1;
   margin: 5px;
 }
-a .container-card .main-card img {
+a:link .container-card .main-card img {
   width: 100%;
+}
+
+#title {
+  font-size: 25px;
+}
+
+#title:hover {
+  color: #2A6041;
+}
+
+#category-text {
+  color: #1D9568;
 }
 
 /*# sourceMappingURL=home.css.map */
