--- a/public/styles/home.sass
+++ b/public/styles/home.sass
@@ -4,29 +4,51 @@ $color2:#6BFFB8
 $colorSecondary:#2A6041
 $color3: #1D9568
     
-
+*
+    font-family:'Audiowide' ,'Russo One', sans-serif
+    letter-spacing: 2px
 #jumbotron
     background: none
     color: $colorText
-
+    h1
+        color: $color2
+        font-size: 80px 
+        letter-spacing: 20px
+        margin-bottom: 20px
+#quote
+    font-size: 15px
 #container
     margin-right: 60px
     min-height: 520px
-a
+    
+    
+    
+a:link
     text-align: center
-    font-size: 20px
-    color: $color3    
+    font-size: 15px
+    color: $color3 
+    text-decoration: none
+    
 
     .container-card 
         
         display: inline-flex
         flex-wrap: wrap
         justify-content: center
+    
         .main-card
             background: #D7EBE1
             margin: 5px
             img 
                 width: 100%
+#title  
+    font-size: 25px
+#title:hover  
+    color: $colorSecondary 
+    
+#category-text
+    color: $color3
+                 
 
 
 
