--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -3,6 +3,8 @@ $colorText: #D7EBE1
 $color2:#6BFFB8
 $colorSecondary:#2A6041
 $color3: #1D9568
+*
+    font-family: 'Russo One', sans-serif
 body 
     background: url(https://d3.xlrs.eu/wp-content/uploads/2018/01/black-gradient-background-1024x685.jpg)
     background-repeat: no-repeat
@@ -25,4 +27,12 @@ body
 ul 
   li 
     i 
+        color: $color3
+        font-family: 'Russo One'
+    i:hover 
         color: $color2
+
+
+#CR
+    color: $color2
+
