--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide|Russo+One&display=swap" rel="stylesheet">
   {{!-- jquery --}}
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
@@ -57,7 +57,7 @@
     </ul>
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center text-light py-3 ">© 2019 Copyright
+    <div id="CR" class="footer-copyright text-center  py-3 ">© 2019 Copyright
     </div>
   </footer>
 </body>
